api/swim_schema/src/schema/tests/derive/validated_form/all_items_op_arg_count.stderr
error: Only one argument is permitted as the schema for all items
  --> $DIR/src/schema/tests/derive/validated_form/all_items_op_arg_count.rs:18:14
   |
18 |     #[derive(ValueSchema)]
   |              ^^^^^^^^^^^
